k8s/kafka/kafka-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kafka-gw
  namespace: istio-system
spec:
  selector:
    istio: egressgateway
  servers:
  - hosts:
    - "kafka.rezz.io"
    port:
      number: 13377
      name: tcp-13377
      protocol: TCP
    tls:
      mode: PASSTHROUGH
