k8s/kafka/kafka-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gateway-kafka-vs
  namespace: istio-system
spec:
  exportTo:
    - "*"
  hosts:
  - "kafka.rezz.io"
  gateways:
  - mesh
  - elk-gw
  tcp:
  - match:
    - port: 9092
      gateways:
      - mesh
    route:
    - destination:
        host: external-kafka-svc.istio-system.svc.cluster.local
      weight: 100
  - match:
    - port: 13377
      gateways:
      - elk-gw
    route:
    - destination:
        host: "kafka.rezz.io"
        port:
          number: 9092
      weight: 100
